windemo/client.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: client-a
  name: client-a
  namespace: demo
spec:
  containers:
  - args:
    - /bin/sh
    - -c
    - sleep 360000
    # Use 1.28 to work around nslookup issue. 
    # Make it easier to debug DNS issue if we hit any.
    image: busybox:1.28
    imagePullPolicy: Always
    name: busybox
  nodeSelector:
    beta.kubernetes.io/os: linux

---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: client-b
  name: client-b
  namespace: demo
spec:
  containers:
  - args:
    - /bin/sh
    - -c
    - sleep 360000
    # Use 1.28 to work around nslookup issue. 
    # Make it easier to debug DNS issue if we hit any.
    image: busybox:1.28
    imagePullPolicy: Always
    name: busybox
  nodeSelector:
    beta.kubernetes.io/os: linux
