windemo/porter-windows.yaml
# This is for connection test purpose
# Two porter pods on windows nodes with a porter service.
apiVersion: v1
kind: Pod
metadata:
  name: node1-porter
  namespace: demo
  labels:
    app: porter
spec:
    containers:
    - name: porter
      image: songtjiang/porter:windows
      ports:
      - containerPort: 80
      imagePullPolicy: IfNotPresent 
    # This is for Openshift
    securityContext:
      seLinuxOptions: {}
    nodeSelector:
      kubernetes.io/os: windows

---
apiVersion: v1
kind: Service
metadata:
  name: porter
  namespace: demo
  labels:
    app: porter
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: porter
  type: NodePort
